--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>2.0.5-beta</version>
+    	<scope>test</scope>
+	</dependency>
   </dependencies>
 </project>
